clusters/home/home/owncloud/owncloud-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owncloud
  namespace: home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: owncloud
  template:
    metadata:
      labels:
        app: owncloud
    spec:
      containers:
        - name: owncloud
          image: owncloud/server:10.15.0
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: files
              mountPath: /data/owncloud-files/
      volumes:
        - name: files
          persistentVolumeClaim:
            claimName: owncloud-files
---
apiVersion: v1
kind: Service
metadata:
  name: owncloud
  namespace: home
spec:
  type: ClusterIP
  selector:
    app: owncloud
  ports:
    - name: http
      port: 80
      targetPort: 8080
