clusters/home/home/owncloud/owncloud-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owncloud-redis
  namespace: home
spec:
  replicas: 1
  selector:
    matchLabels:
      app: owncloud-redis
  template:
    metadata:
      labels:
        app: owncloud-redis
    spec:
      containers:
        - name: redis
          image: redis:6
          args: ["--databases", "1"]
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: owncloud-redis
  namespace: home
spec:
  type: ClusterIP
  selector:
    app: owncloud-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
